--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   },
   "author": "Razvan Pat",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "browserify": "^6.3.2",
     "connect": "^3.3.3",
+    "connect-livereload": "^0.5.0",
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.0",
-    "gulp-livereload": "^2.1.1"
-  },
-  "devDependencies": {
     "gulp-jshint": "^1.9.0",
+    "gulp-livereload": "^2.1.1",
     "jshint-stylish": "^1.0.0"
   }
 }
