--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.0",
     "gulp-jshint": "^1.9.0",
+    "gulp-less": "^1.3.6",
     "gulp-livereload": "^2.1.1",
     "jshint-stylish": "^1.0.0"
   }
