--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "bower": "^1.3.12",
     "browserify": "^6.3.2",
     "connect": "^3.3.3",
     "connect-livereload": "^0.5.0",
@@ -18,6 +19,7 @@
     "gulp-jshint": "^1.9.0",
     "gulp-less": "^1.3.6",
     "gulp-livereload": "^2.1.1",
-    "jshint-stylish": "^1.0.0"
+    "jshint-stylish": "^1.0.0",
+    "serve-static": "^1.7.1"
   }
 }
