--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "author": "Razvan Pat",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^2.4.1"
+  },
   "devDependencies": {
     "bower": "^1.3.12",
     "browserify": "^6.3.2",
