--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "gulp-less": "^1.3.6",
     "gulp-livereload": "^2.1.1",
     "jshint-stylish": "^1.0.0",
-    "serve-static": "^1.7.1"
+    "mocha": "^2.1.0",
+    "serve-static": "^1.7.1",
+    "chai": "^1.10.0",
+    "chai-spies": "^0.5.1",
+    "gulp-mocha": "^2.0.0",
+    "run-sequence": "^1.0.2"
   }
 }
