first new entry date defaults to first non working day

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,12 @@ crashlytics-build.properties
 
 ### ActivityReport ###
 .tmp/
+
+### vim ###
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
